doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\nadav.wei\Documents\blob\input output
-d
C:\Users\nadav.wei\Documents\blob\input output\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\nadav.wei\Documents\blob\input output\ageNadav.java
<---- end of javadoc command ---->
Loading source file C:\Users\nadav.wei\Documents\blob\input output\ageNadav.java...
C:\Users\nadav.wei\Documents\blob\input output\ageNadav.java:8: error: ';' expected
    age = age.paarse    
                    ^
1 error
